tests/compile_samples/visitString/fail/literal-both.missing-null-handler.ts
import { visitString } from "../../../../src";

type RGB = "r" | "g" | "b";

visitString("r" as RGB | null | undefined).with({
    "r": () => {
        return 1;
    },
    "g": () => {
        return 2;
    },
    "b": () => {
        return 3;
    },
    handleUndefined: () => {
        return 0;
    }
    // missing handleNull
});
